--- a/Macros/SPEED_TEST.cfg
+++ b/Macros/SPEED_TEST.cfg
@@ -1,38 +1,65 @@
-# Example:
-# SPEED_TEST SPEED=100 REPEAT=1 ACCEL=4000 ACCEL_TO_DECEL=2000
-# Written by: yak#0417 (VintageGriffin)
-
+# Home, get position, throw around toolhead, home again.
+# If XY steps are greater than XY microsteps different (a full step - usually just endstop variance), then we likely skipped.	
+# Example: SPEED_TEST SPEED=300 REPEAT=1 ACCEL=5000
 [gcode_macro SPEED_TEST]
 gcode:
-  {% set speed  = params.SPEED|default(100)|int %}
-  {% set repeat = params.REPEAT|default(1)|int %}
-  {% set accel  = params.ACCEL|default(printer.configfile.config['printer'].max_accel|int)|int %}
-  {% set accel_to_decel = params.ACCEL_TO_DECEL|default(accel/2)|int %}
-  
-  {% set prev_accel = printer.configfile.config['printer'].max_accel|int %}
-  {% set diagonal_length = [printer.toolhead.axis_maximum.x - 4, printer.toolhead.axis_maximum.y - 14]|min %}
-  
-  SAVE_GCODE_STATE NAME=STATE_ab_speed_test
-  SET_VELOCITY_LIMIT ACCEL={accel} ACCEL_TO_DECEL={accel_to_decel}
+	# Speed
+	{% set speed  = params.SPEED|default(100)|int %}
+	# Iterations
+	{% set repeat = params.REPEAT|default(1)|int %}
+	# Acceleration
+	{% set accel  = params.ACCEL|default(printer.configfile.config['printer'].max_accel|int)|int %}
+	# Accel to decel
+	{% set accel_to_decel = params.ACCEL_TO_DECEL|default(accel/2)|int %}
+	# Bounding box (in case the machine min/maxes are not perfect)
+	{% set bound = params.BOUND|default(20)|int %}
+	
+	# Set speed test bounds (machine minimum/maximum positions, inset by the bounding box)
+	{% set x_min = printer.toolhead.axis_minimum.x + bound %}
+	{% set x_max = printer.toolhead.axis_maximum.x - bound %}
+	{% set y_min = printer.toolhead.axis_minimum.y + bound %}
+	{% set y_max = printer.toolhead.axis_maximum.y - bound %}
 
-  {% if "xyz" not in printer.toolhead.homed_axes %}
-    G28
-  {% endif %}
-  
-  # starting position
-  G90
-  G0 X2 Y2 Z10 F{200 * 60}
-  G91
+	# Save current gcode state (absolute/relative, etc)
+	SAVE_GCODE_STATE NAME=SPEED_TEST
+	SET_VELOCITY_LIMIT ACCEL={accel} ACCEL_TO_DECEL={accel_to_decel}
 
-  {% for _ in range(repeat) %}
-    G0 X{diagonal_length}  Y{diagonal_length}  F{speed * 60}
-    G0 X-{diagonal_length} Y-{diagonal_length} F{speed * 60}
-  {% endfor %}
+	# Home and get position for comparison later
+	G28 X Y
+	# Home z if not homed already
+	{% if "z" not in printer.toolhead.homed_axes %}
+		G28 Z
+	{% endif %}
+	GET_POSITION
 
-  # restore accel
-  SET_VELOCITY_LIMIT ACCEL={prev_accel}
-  
-  # we may be skipping steps at this point, re-home X and Y for safety
-  G28 X Y
-  
-  RESTORE_GCODE_STATE NAME=STATE_ab_speed_test
+	# Go to starting position
+	G90
+	G0 X{x_min} Y{y_min} Z{bound + 10} F{100 * 60}
+
+	{% for i in range(repeat) %}
+		# Diagonals
+		G0 X{x_min} Y{y_min} F{speed * 60}
+		G0 X{x_max} Y{y_max} F{speed * 60}
+		G0 X{x_min} Y{y_min} F{speed * 60}
+		G0 X{x_max} Y{y_min} F{speed * 60}
+		G0 X{x_min} Y{y_max} F{speed * 60}
+		G0 X{x_max} Y{y_min} F{speed * 60}
+		
+		# Box
+		G0 X{x_min} Y{y_min} F{speed * 60}
+		G0 X{x_min} Y{y_max} F{speed * 60}
+		G0 X{x_max} Y{y_max} F{speed * 60}
+		G0 X{x_max} Y{y_min} F{speed * 60}
+	{% endfor %}
+
+	# Restore max speed/accel/accel_to_decel to their configured values
+	SET_VELOCITY_LIMIT VELOCITY={printer.configfile.settings.printer.max_velocity} 
+	SET_VELOCITY_LIMIT ACCEL={printer.configfile.settings.printer.max_accel}  
+	SET_VELOCITY_LIMIT ACCEL_TO_DECEL={printer.configfile.settings.printer.max_accel_to_decel} 
+
+	# Re-home and get position again for comparison
+	G28 X Y
+	GET_POSITION
+
+	# Restore previous gcode state
+	RESTORE_GCODE_STATE NAME=SPEED_TEST
