--- a/Macros/TEST_SPEED.cfg
+++ b/Macros/TEST_SPEED.cfg
@@ -5,13 +5,11 @@
 [gcode_macro TEST_SPEED]
 gcode:
 	# Speed
-	{% set speed  = params.SPEED|default(200)|int %}
+	{% set speed  = params.SPEED|default(printer.configfile.settings.printer.max_velocity)|int %}
 	# Iterations
 	{% set iterations = params.ITERATIONS|default(5)|int %}
 	# Acceleration
-	{% set accel  = params.ACCEL|default(printer.configfile.config['printer'].max_accel|int)|int %}
-	# Accel to decel
-	{% set accel_to_decel = params.ACCEL_TO_DECEL|default(accel/2)|int %}
+	{% set accel  = params.ACCEL|default(printer.configfile.settings.printer.max_accel|int) %}
 	# Bounding box (in case the machine min/maxes are not perfect)
 	{% set bound = params.BOUND|default(20)|int %}
 	
@@ -28,7 +26,7 @@ gcode:
 	G90
 	
 	# Set new limits
-	SET_VELOCITY_LIMIT VELOCITY={speed} ACCEL={accel} ACCEL={accel} ACCEL_TO_DECEL={accel_to_decel}
+	SET_VELOCITY_LIMIT VELOCITY={speed} ACCEL={accel} ACCEL={accel} ACCEL_TO_DECEL={accel / 2}
 
 	# Home and get position for comparison later:
 		G28
