--- a/Macros/TEST_SPEED.cfg
+++ b/Macros/TEST_SPEED.cfg
@@ -9,7 +9,7 @@ gcode:
 	# Iterations
 	{% set iterations = params.ITERATIONS|default(5)|int %}
 	# Acceleration
-	{% set accel  = params.ACCEL|default(printer.configfile.settings.printer.max_accel|int) %}
+	{% set accel  = params.ACCEL|default(printer.configfile.settings.printer.max_accel)|int %}
 	# Bounding box (in case the machine min/maxes are not perfect)
 	{% set bound = params.BOUND|default(20)|int %}
 	
