--- a/Macros/TEST_SPEED.cfg
+++ b/Macros/TEST_SPEED.cfg
@@ -2,23 +2,46 @@
 # If MCU stepper positions (first line in GET_POSITION) are greater than a full step different (your number of microsteps), then skipping occured.
 # We only measure to a full step to accomodate for endstop variance.
 # Example: TEST_SPEED SPEED=300 ACCEL=5000 ITERATIONS=10
+
+[gcode_macro _vars_speed] #work in progress to display loops remaining, nice if you run a big one :)
+gcode:
+	{% set remaining  = params.i|int %}
+	{ action_respond_info("loop: %remaining% "), remaining  }
+
 [gcode_macro TEST_SPEED]
+
+variable_testspeedz: "False"
+
+	#TEST_SPEED SPEED=450 ACCEL=10000 TESTSPEEDZ=True ITERATIONS=10
+	#TEST_SPEED SPEED=450 ACCEL=10000 ITERATIONS=60
 gcode:
 	# Speed
-	{% set speed  = params.SPEED|default(printer.configfile.settings.printer.max_velocity)|int %}
-	# Iterations
-	{% set iterations = params.ITERATIONS|default(5)|int %}
+	{% set speed  = params.SPEED|default(printer.configfile.settings.printer.max_velocity)|float %}
 	# Acceleration
-	{% set accel  = params.ACCEL|default(printer.configfile.settings.printer.max_accel)|int %}
+	{% set accel  = params.ACCEL|default(printer.configfile.settings.printer.max_accel)|float %}
+	# Iterations
+	{% set iterations = params.ITERATIONS|default(15)|int %}
+	{% set testspeedz = params.testspeedz|default(False) %}
+	SET_GCODE_VARIABLE MACRO=TEST_SPEED VARIABLE=testspeedz VALUE={ testspeedz } ##this is getting passed as a string ?
 	# Bounding box (in case the machine min/maxes are not perfect)
 	{% set bound = params.BOUND|default(20)|int %}
-	
+	{% set boundz = params.BOUND|default(120)|int %}
+
+	{% set z_center = (printer.toolhead.axis_minimum.z|float + printer.toolhead.axis_maximum.z|float ) / 2 %}
+	{% set x_center = (printer.toolhead.axis_minimum.x|float + printer.toolhead.axis_maximum.x|float ) / 2 %}
+	{% set y_center = (printer.toolhead.axis_minimum.y|float + printer.toolhead.axis_maximum.y|float ) / 2 %}
 	# Set speed test bounds (machine minimum/maximum positions, inset by the bounding box)
+	{% set x_min_constraint = x_center - bound %}
+	{% set x_max_constraint = x_center + bound %}
+	{% set y_min_constraint = y_center - bound %}
+	{% set y_max_constraint = y_center + bound %}
+	
 	{% set x_min = printer.toolhead.axis_minimum.x + bound %}
 	{% set x_max = printer.toolhead.axis_maximum.x - bound %}
 	{% set y_min = printer.toolhead.axis_minimum.y + bound %}
 	{% set y_max = printer.toolhead.axis_maximum.y - bound %}
-
+	{% set z_min = printer.toolhead.axis_minimum.z + boundz %}
+	{% set z_max = printer.toolhead.axis_maximum.z - boundz + 15 + printer.toolhead.axis_minimum.z %}
 	# Save current gcode state (absolute/relative, etc)
 	SAVE_GCODE_STATE NAME=TEST_SPEED
 	
@@ -27,7 +50,6 @@ gcode:
 	
 	# Set new limits
 	SET_VELOCITY_LIMIT VELOCITY={speed} ACCEL={accel} ACCEL_TO_DECEL={accel / 2}
-
 	# Home and get position for comparison later:
 		G28
 		# QGL if not already QGLd (only if QGL section exists in config)
@@ -37,37 +59,105 @@ gcode:
 				G28 Z
 			{% endif %}
 		{% endif %}	
-		G0 X{printer.toolhead.axis_maximum.x} Y{printer.toolhead.axis_maximum.y} F{30 * 60}
-		G4 P1000 
+		{% if testspeedz == "True" %} #True
+			G0 X{printer.toolhead.axis_maximum.x} Y{printer.toolhead.axis_maximum.y} Z{printer.toolhead.axis_minimum.z + 20} F{30 * 60}
+		{% elif not testspeedz %} #False 
+			G0 X{printer.toolhead.axis_maximum.x} Y{printer.toolhead.axis_maximum.y} F{30 * 60}
+		{% endif %}
+		G4 P1000
 		GET_POSITION
 
 	# Go to starting position
-	G0 X{x_min} Y{y_min} Z{bound + 10} F{speed * 60}
+	{% if testspeedz == "True" %} #True
+		G0 X{x_min} Y{y_min} Z{z_min} F{speed * 60}
+	{% elif not testspeedz %} #False 
+		G0 X{x_min} Y{y_min} Z{bound + 10} F{speed * 60}
+	{% endif %}
+	
+	{% if testspeedz == "True" %} #True if string
+		{ action_respond_info("running Z movements.") }
+		{% for i in range(iterations) %}
+			# Diagonals
+			G0 X{x_min} Y{y_min} Z{z_min} F{speed * 60}
+			G0 X{x_max} Y{y_max} Z{z_max} F{speed * 60}
+			G0 X{x_min} Y{y_min} Z{z_min} F{speed * 60}
+			G0 X{x_max} Y{y_min} Z{z_max} F{speed * 60}
+			G0 X{x_min} Y{y_max} Z{z_min} F{speed * 60}
+			G0 X{x_max} Y{y_min} Z{z_max} F{speed * 60}
+			
+			# Box
+			G0 X{x_min} Y{y_min} Z{z_min} F{speed * 60}
+			G0 X{x_min} Y{y_max} Z{z_max} F{speed * 60}
+			G0 X{x_max} Y{y_max} Z{z_min} F{speed * 60}
+			G0 X{x_max} Y{y_min} Z{z_max} F{speed * 60}
 
-	{% for i in range(iterations) %}
-		# Diagonals
-		G0 X{x_min} Y{y_min} F{speed * 60}
-		G0 X{x_max} Y{y_max} F{speed * 60}
-		G0 X{x_min} Y{y_min} F{speed * 60}
-		G0 X{x_max} Y{y_min} F{speed * 60}
-		G0 X{x_min} Y{y_max} F{speed * 60}
-		G0 X{x_max} Y{y_min} F{speed * 60}
-		
-		# Box
-		G0 X{x_min} Y{y_min} F{speed * 60}
-		G0 X{x_min} Y{y_max} F{speed * 60}
-		G0 X{x_max} Y{y_max} F{speed * 60}
-		G0 X{x_max} Y{y_min} F{speed * 60}
-	{% endfor %}
 
+			# Diagonals constraint 
+			G0 X{x_min_constraint} Y{y_min_constraint} Z{z_min} F{speed * 60}
+			G0 X{x_max_constraint} Y{y_max_constraint} Z{z_max} F{speed * 60}
+			G0 X{x_min_constraint} Y{y_min_constraint} Z{z_min} F{speed * 60}
+			G0 X{x_max_constraint} Y{y_min_constraint} Z{z_max} F{speed * 60}
+			G0 X{x_min_constraint} Y{y_max_constraint} Z{z_min} F{speed * 60}
+			G0 X{x_max_constraint} Y{y_min_constraint} Z{z_max} F{speed * 60}
+			
+			# Box constraint
+			G0 X{x_min_constraint} Y{y_min_constraint} Z{z_min} F{speed * 60}
+			G0 X{x_min_constraint} Y{y_max_constraint} Z{z_max} F{speed * 60}
+			G0 X{x_max_constraint} Y{y_max_constraint} Z{z_min} F{speed * 60}
+			G0 X{x_max_constraint} Y{y_min_constraint} Z{z_max} F{speed * 60}
+
+			#SET_GCODE_VARIABLE MACRO=_vars_speed VARIABLE=i VALUE={ i }
+			#_vars_speed
+		{% endfor %}
+	{% endif %}
+
+	{% if not testspeedz %} #False using this as default if it is not defined.
+		{ action_respond_info("NOT running Z movements.") }
+		{% for i in range(iterations) %}
+			# Diagonals
+			G0 X{x_min} Y{y_min} F{speed * 60}
+			G0 X{x_max} Y{y_max} F{speed * 60}
+			G0 X{x_min} Y{y_min} F{speed * 60}
+			G0 X{x_max} Y{y_min} F{speed * 60}
+			G0 X{x_min} Y{y_max} F{speed * 60}
+			G0 X{x_max} Y{y_min} F{speed * 60}
+			
+			# Box
+			G0 X{x_min} Y{y_min} F{speed * 60}
+			G0 X{x_min} Y{y_max} F{speed * 60}
+			G0 X{x_max} Y{y_max} F{speed * 60}
+			G0 X{x_max} Y{y_min} F{speed * 60}
+
+			# Diagonals constraint 
+			G0 X{x_min_constraint} Y{y_min_constraint} F{speed * 60}
+			G0 X{x_max_constraint} Y{y_max_constraint} F{speed * 60}
+			G0 X{x_min_constraint} Y{y_min_constraint} F{speed * 60}
+			G0 X{x_max_constraint} Y{y_min_constraint} F{speed * 60}
+			G0 X{x_min_constraint} Y{y_max_constraint} F{speed * 60}
+			G0 X{x_max_constraint} Y{y_min_constraint} F{speed * 60}
+			
+			# Box constraint
+			G0 X{x_min_constraint} Y{y_min_constraint} F{speed * 60}
+			G0 X{x_min_constraint} Y{y_max_constraint} F{speed * 60}
+			G0 X{x_max_constraint} Y{y_max_constraint} F{speed * 60}
+			G0 X{x_max_constraint} Y{y_min_constraint} F{speed * 60}
+		{% endfor %}
+	{% endif %}
+
+	M400
 	# Restore max speed/accel/accel_to_decel to their configured values
 	SET_VELOCITY_LIMIT VELOCITY={printer.configfile.settings.printer.max_velocity} ACCEL={printer.configfile.settings.printer.max_accel} ACCEL_TO_DECEL={printer.configfile.settings.printer.max_accel_to_decel} 
 
-	# Re-home XY and get position again for comparison:
-		G28 X Y
+	# Re-home XYZ and get position again for comparison:
+		
+		G28
 		# Go to XY home positions (in case your homing override leaves it elsewhere)
-		G0 X{printer.toolhead.axis_maximum.x} Y{printer.toolhead.axis_maximum.y} F{30 * 60}
-		G4 P1000 
+		{% if testspeedz == "True" %} #True if string
+			G0 X{printer.toolhead.axis_maximum.x} Y{printer.toolhead.axis_maximum.y} Z{printer.toolhead.axis_minimum.z + 20} F{30 * 60}
+		{% elif not testspeedz %} #False 
+			G0 X{printer.toolhead.axis_maximum.x} Y{printer.toolhead.axis_maximum.y} F{30 * 60}
+		{% endif %}
+		G4 P1000
 		GET_POSITION
 
 	# Restore previous gcode state (absolute/relative, etc)
