add start/end notifications for easier spotting and parsing of klippy.log

--- a/Macros/TEST_SPEED.cfg
+++ b/Macros/TEST_SPEED.cfg
@@ -22,6 +22,8 @@ gcode:
 	# Save current gcode state (absolute/relative, etc)
 	SAVE_GCODE_STATE NAME=TEST_SPEED
 	
+	{ action_respond_info("TEST_SPEED: starting %d iterations at speed %d, accel %d" % (iterations, speed, accel)) }
+
 	# Absolute positioning
 	G90
 	
@@ -72,3 +74,5 @@ gcode:
 
 	# Restore previous gcode state (absolute/relative, etc)
 	RESTORE_GCODE_STATE NAME=TEST_SPEED
+
+	{ action_respond_info("TEST_SPEED: end") }
