--- a/Macros/TEST_SPEED.cfg
+++ b/Macros/TEST_SPEED.cfg
@@ -65,8 +65,8 @@ gcode:
 	# Restore max speed/accel/accel_to_decel to their configured values
 	SET_VELOCITY_LIMIT VELOCITY={printer.configfile.settings.printer.max_velocity} ACCEL={printer.configfile.settings.printer.max_accel} ACCEL_TO_DECEL={printer.configfile.settings.printer.max_accel_to_decel} 
 
-	# Re-home XY and get position again for comparison:
-		G28 X Y
+	# Re-home and get position again for comparison:
+		G28
 		# Go to XY home positions (in case your homing override leaves it elsewhere)
 		G0 X{printer.toolhead.axis_maximum.x} Y{printer.toolhead.axis_maximum.y} F{30 * 60}
 		G4 P1000 
