has remaning loops feature
updated

--- a/Macros/TEST_SPEED.cfg
+++ b/Macros/TEST_SPEED.cfg
@@ -7,6 +7,7 @@
 gcode:
 	{% set remaining  = params.i|int %}
 	{ action_respond_info("loop: %s" % remaining)  }
+	RESPOND MSG="{remaining}"
 
 [gcode_macro TEST_SPEED]
 
