fixed a couple bugs
got a few friends to test it and i found a few bugs with testing z.
should be more universal now.
what if the user doesn't have QGL will it try to run ?

--- a/Macros/TEST_SPEED.cfg
+++ b/Macros/TEST_SPEED.cfg
@@ -22,7 +22,7 @@ gcode:
 	{% set accel  = params.ACCEL|default(printer.configfile.settings.printer.max_accel)|int %}
 	# Bounding inset for large pattern (helps prevent slamming the toolhead into the sides after small skips, and helps to account for machines with imperfectly set dimensions)
 	{% set bound = params.BOUND|default(20)|int %}
-	{% set boundz = BOUNDZ|default(120)|int %} ##should prob fix this so it is the center value
+	{% set boundz = BOUNDZ|default(printer.toolhead.axis_maximum.z / 2 )|int %} ##should prob fix this so it is the center value
 	# Size for small pattern box
 	{% set smallpatternsize = SMALLPATTERNSIZE|default(20)|int %}
 	
@@ -32,8 +32,8 @@ gcode:
 		{% set x_max = printer.toolhead.axis_maximum.x - bound %}
 		{% set y_min = printer.toolhead.axis_minimum.y + bound %}
 		{% set y_max = printer.toolhead.axis_maximum.y - bound %}
-		{% set z_min = printer.toolhead.axis_minimum.z + boundz %} #120
-		{% set z_max = printer.toolhead.axis_maximum.z - boundz + 19 + printer.toolhead.axis_minimum.z %} #119
+		{% set z_min = printer.toolhead.axis_minimum.z + boundz %} #110 what if the users z min number is lower than 0 ?
+		{% set z_max = printer.toolhead.axis_maximum.z - boundz + 2 %} #112
 	#zigzag movements overkill ?
 		{% set zigzagcount_Y = (y_min + y_max / zigzagmovementdistance)|round(0)|int %}
 		{% set zigzagcount_X = (x_min + x_max / zigzagmovementdistance)|round(0)|int %}
@@ -183,10 +183,10 @@ gcode:
                 ## while current X position is less than x max bound
                 {% for m in range(zigzagcount_X) %}	
                 #while{%  (printer.toolhead.position.x < x_center_max) %}   ###while loops no work >:(
-                    G0 Y{y_center_min} F{speed * 60}
+                    G0 Y{y_center_min} Z{z_min} F{speed * 60}
                     ##have to call another macro here to get an updated current position on each loop
                     _gp X_OR_Y=0 X_MAX={x_max} Y_MAX={y_max} ZZMD={zigzagmovementdistance} SPEED={speed} 
-                    G0 Y{y_center_max} F{speed * 60}
+                    G0 Y{y_center_max} Z{z_max} F{speed * 60}
                 {% endfor %}
 
 
