--- a/macros/TEST_SPEED.cfg
+++ b/macros/TEST_SPEED.cfg
@@ -42,6 +42,10 @@ gcode:
 	
 	# Home and get position for comparison later:
 		G28
+		# Move 20mm away from max position and home again (to help with hall effect endstop accuracy)
+		G90
+		G1 X{printer.toolhead.axis_maximum.x-20} Y{printer.toolhead.axis_maximum.y-20} F{30*60}
+		G28 X Y
 		# QGL if not already QGLd (only if QGL section exists in config)
 		{% if printer.configfile.settings.quad_gantry_level %}
 			{% if printer.quad_gantry_level.applied == False %}
@@ -96,7 +100,7 @@ gcode:
 	SET_VELOCITY_LIMIT VELOCITY={printer.configfile.settings.printer.max_velocity} ACCEL={printer.configfile.settings.printer.max_accel} ACCEL_TO_DECEL={printer.configfile.settings.printer.max_accel_to_decel} 
 
 	# Re-home and get position again for comparison:
-		G28
+		G28 X Y
 		# Go to XY home positions (in case your homing override leaves it elsewhere)
 		G90
 		G0 X{printer.toolhead.axis_maximum.x-1} Y{printer.toolhead.axis_maximum.y-1} F{30*60}
