--- a/macros/TEST_SPEED.cfg
+++ b/macros/TEST_SPEED.cfg
@@ -42,7 +42,7 @@ gcode:
 	
 	# Home and get position for comparison later:
 		G28
-		# Move 50mm away from max position and home again (to help with hall effect endstop accuracy)
+		# Move 50mm away from max position and home again (to help with hall effect endstop accuracy) - https://github.com/AndrewEllis93/Print-Tuning-Guide/issues/24
 		G90
 		G1 X{printer.toolhead.axis_maximum.x-50} Y{printer.toolhead.axis_maximum.y-50} F{30*60}
 		G28 X Y
