--- a/macros/TEST_SPEED_DELTA.cfg
+++ b/macros/TEST_SPEED_DELTA.cfg
@@ -1,3 +1,5 @@
+# This variant is for delta printers.
+
 # Home, get position, throw around toolhead, home again.
 # If MCU stepper positions (first line in GET_POSITION) are greater than a full step different (your number of microsteps), then skipping occured.
 # We only measure to a full step to accomodate for endstop variance.
@@ -39,21 +41,10 @@ gcode:
     { action_respond_info("TEST_SPEED_DELTA: starting %d iterations at speed %d, accel %d" % (iterations, speed, accel)) }
     
     # Home and get position for comparison later:
-        G28
-        # QGL if not already QGLd (only if QGL section exists in config)
-        {% if printer.configfile.settings.quad_gantry_level %}
-            {% if printer.quad_gantry_level.applied == False %}
-                QUAD_GANTRY_LEVEL
-                G28 Z
-            {% endif %}
-        {% endif %} 
-        # Move 50mm away from max position and home again (to help with hall effect endstop accuracy - https://github.com/AndrewEllis93/Print-Tuning-Guide/issues/24)
-        G90
-        #G1 X{printer.toolhead.axis_maximum.x-50} Y{printer.toolhead.axis_maximum.y-50} F{30*60}
-        #G28 X Y
-        #G0 X{printer.toolhead.axis_maximum.x-1} Y{printer.toolhead.axis_maximum.y-1} F{30*60}
-        G4 P1000 
-        GET_POSITION
+    G28
+    G90
+    G4 P1000 
+    GET_POSITION
 
     # Go to starting position
     G0 X{x_min} Y{y_min} Z{printer.toolhead.axis_maximum.z - bound} F{speed*60}
@@ -97,12 +88,9 @@ gcode:
     SET_VELOCITY_LIMIT VELOCITY={printer.configfile.settings.printer.max_velocity} ACCEL={printer.configfile.settings.printer.max_accel} ACCEL_TO_DECEL={printer.configfile.settings.printer.max_accel_to_decel} 
 
     # Re-home and get position again for comparison:
-        G28
-        # Go to XY home positions (in case your homing override leaves it elsewhere)
-        G90
-        G0 X{printer.toolhead.axis_maximum.x-1} Y{printer.toolhead.axis_maximum.y-1} F{30*60}
-        G4 P1000 
-        GET_POSITION
+    G28
+    G4 P1000 
+    GET_POSITION
 
     # Restore previous gcode state (absolute/relative, etc)
     RESTORE_GCODE_STATE NAME=TEST_SPEED_DELTA
