TEST_SPEED_DELTA out of range error fix

--- a/macros/TEST_SPEED_DELTA.cfg
+++ b/macros/TEST_SPEED_DELTA.cfg
@@ -47,7 +47,7 @@ gcode:
     GET_POSITION
 
     # Go to starting position
-    G0 X{x_min} Y{y_min} Z{printer.toolhead.axis_maximum.z - bound} F{speed*60}
+    G0 X{x_min} Y{y_min} Z{printer.toolhead.axis_maximum.z/2} F{speed*60}
 
     # Set new limits
     SET_VELOCITY_LIMIT VELOCITY={speed} ACCEL={accel} ACCEL_TO_DECEL={accel / 2}
